# ParaViewMetisMeshPartitioner

./: CMakeLists.txt  README.md  vtkMetisKernel.cxx  vtkMetisKernel.h  vtkMetisMeshPartitioner.cxx  vtkMetisMeshPartitioner.h
cmake/: FindMETIS.cmake
resources/: MetisMeshPartitioner.xml  ParaViewMetisMeshPartitioner.xml
